# emtd

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  RELEASING.md  pyproject.toml
.github/workflows/: pypi_publish.yml
emtd/: __init__.py  emtd.py
