[tool.poetry]
name = "emtd"
version = "0.1.1"
description = "This projects provides as slim Python wrapper to access the 'technology-data' data set / snakemake workflow, maintained by the PyPSA team."
license = "MIT"
authors = ["sstroemer <stefan.stroemer@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sstroemer/emtd"
keywords = ["energy modeling", "technology data"]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "<2.0.0"
beautifulsoup4 = "^4.12.2"
numpy = "^1.25.0"
xlrd = "^2.0.1"
scipy = "^1.11.3"
packaging = "^23.2"
openpyxl = "<=3.0.9"
snakemake = "^7.32.4"
currencyconverter = "^0.17.13"
tabula-py = "^2.8.2"
pathlib = "^1.0.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
