[project]
name = "emtd"
version = "0.3.0"
authors = [
    {name = "sstroemer", email = "stefan.stroemer@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
description = "This projects provides as slim Python wrapper to access the 'technology-data' data set / snakemake workflow, maintained by the PyPSA team."
readme = "README.md"
keywords = [
    "energy modeling",
    "technology data",
]
dependencies = [
    "pandas >=2.1, <3.0",
    "snakemake >=8.5, <9.0",
    "openpyxl >=3.1.2, <4.0",
    "beautifulsoup4 >= 4.12, <5.0",
    "numpy >= 1.26, <2.0",
    "xlrd >=2.0, <3.0",
    "scipy >= 1.14.0, <2.0",
    "packaging >= 23.0, <24.0",
    "currencyconverter",
    "tabula-py >= 2.10, <3.0",
    "pathlib >= 1.0, <2.0",
    "pyyaml >= 6.0, <7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 120

[project.urls]
repository = "https://github.com/sstroemer/emtd"
